crates/overdrive-core/tests/compile_fail/intent_vs_observation.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/intent_vs_observation.rs:18:25
   |
18 |     expects_observation(store);
   |     ------------------- ^^^^^ expected trait `ObservationStore`, found trait `IntentStore`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&(dyn ObservationStore + 'static)`
              found reference `&(dyn IntentStore + 'static)`
note: function defined here
  --> tests/compile_fail/intent_vs_observation.rs:15:4
   |
15 | fn expects_observation(_store: &dyn ObservationStore) {}
   |    ^^^^^^^^^^^^^^^^^^^ -----------------------------
